Changed nav bar to horizontal.  Started basic background design

--- a/index.html
+++ b/index.html
@@ -10,12 +10,21 @@
 <body>
     <nav>
         <ul>
+            <li><a href="#">Jonathan Joe</a></li>
+        </ul>
+        <ul>
             <li><a href="#">About</a></li>
             <li><a href="#">Featured</a></li>
             <li><a href="#">Projects</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
     </nav>
+    <div class="placeholder"></div>
+    <section class=main-section>
+        <div class="main-box" id="box-1"></div>
+        <div class="main-box" id="box-2"></div>
+    </section>
+    <section class="mid-box"></section>
     
 </body>
 <script src="scripts/index.js"></script>
