Added profile avatar.

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                     </div>
                 </div>
             </div>
+            <img class="profile-avatar" src="/images/face.jpg" alt="Jonathan Joe">
         </section>
         <!-- <div class="pagejumper page2-jumper"></div>  -->
     </section>
