Working Projects cards, including links

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <ul>
             <!-- RENAME ALL PAGEJUMPERS BECAUSE IT SHOWS IN THE URL -->
             <li><a href="#page1-jumper">About</a></li>
-            <li><a href="#page2-jumper">Featured</a></li>
+            <!-- <li><a href="#page2-jumper">Featured</a></li> -->
             <li><a href="#page3-jumper">Projects</a></li>
             <li><a href="#page4-jumper">Contact</a></li>
         </ul>
@@ -45,16 +45,16 @@
         <!-- <div class="pagejumper page2-jumper"></div>  -->
     </section>
 
-    <section class="page-container page2">
+    <!-- <section class="page-container page2">
         <div class="pagejumper" id="page2-jumper"></div>
         
-    </section>
+    </section> -->
 
     <section class="page-container page3">
         <div class="pagejumper" id="page3-jumper"></div>
 
         <div class="text-component">
-            <h1>Featured Projects</h1>
+            <h1>Projects</h1>
             <p>Have you heard of the coffee app?</p>
         </div>
 
@@ -65,13 +65,22 @@
                 <div class="project-middle">
                     <img src="https://avatarfiles.alphacoders.com/752/75205.png" alt="Avatar" class="project-image">
                     <div class="project-hover">
-                        <button class="project-button">
-                            button1
-                        </button>
-                        <button class="project-button">
-                            button2
-                            <!-- <div class="project-text">Senpai Search</div> -->
-                        </button>
+                        <div class="project-desc">
+                            <p class="project-text">Anime themes site where users can search for openings and endings to various anime.
+                            </p>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://senpai.jonathanjoe.xyz">
+                                <button class="project-button" >
+                                    Live Demo
+                                </button>
+                            </a>
+                            <a href="https://github.com/JonathanDonJoe/SenpaiSearch">
+                                <button class="project-button">
+                                GitHub
+                                </button>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -81,13 +90,22 @@
                 <div class="project-middle">
                     <img src="https://cdn.dribbble.com/users/228053/screenshots/3086637/boba.png" alt="Avatar" class="project-image">
                     <div class="project-hover">
-                        <button class="project-button">
-                            button1
-                        </button>
-                        <button class="project-button">
-                            button2
-                            <!-- <div class="project-text">SweetHub</div> -->
-                        </button>
+                        <div class="project-desc">
+                            <p class="project-text">A social website designed to bring individuals together to enjoy their favorite desserts
+                            </p>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://sweet.jonathanjoe.xyz">
+                                <button class="project-button">
+                                    Live Demo
+                                </button>
+                            </a>
+                            <a href="https://github.com/JonathanDonJoe/SweetHub">
+                                <button class="project-button">
+                                    GitHub
+                                </button>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
