--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="pagejumper" id="page1-jumper"></div>
     
     <section class="page-container page1">
-        <section class="title-container" style="background-image: url('https://images.unsplash.com/photo-1494200483035-db7bc6aa5739?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80');">
+        <section class="title-container" style="background-image: url(/images/giraffe.jpeg);">
             <div class="container">
                 <div class="title-content">
                     <div class="title-label">This is Jonathan</div>
@@ -63,7 +63,7 @@
             <div class="project-container">
                 <h1 class="project-header">Senpai Search</h1>
                 <div class="project-middle">
-                    <img src="https://avatarfiles.alphacoders.com/752/75205.png" alt="Avatar" class="project-image">
+                    <img src="/images/kaneki.png" alt="Avatar" class="project-image">
                     <div class="project-hover">
                         <div class="project-desc">
                             <p class="project-text">Anime themes site where users can search for openings and endings to various anime.
@@ -88,7 +88,7 @@
             <div class="project-container">
                 <h1 class="project-header">SweetHub</h1>
                 <div class="project-middle">
-                    <img src="https://cdn.dribbble.com/users/228053/screenshots/3086637/boba.png" alt="Avatar" class="project-image">
+                    <img src="/images/boba.png" alt="Avatar" class="project-image">
                     <div class="project-hover">
                         <div class="project-desc">
                             <p class="project-text">A social website designed to bring individuals together to enjoy their favorite desserts
