Added responsiveness to page1 and fixed spacing issues with projects

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Jonathan Joe Portfolio</title>
     <link rel="stylesheet" href="./styles/index.css">
+    <script src="https://kit.fontawesome.com/712a3fd887.js"></script>
 </head>
 <body>
     <nav>
@@ -27,7 +28,7 @@
         <section class="title-container" style="background-image: url(/images/giraffe.jpeg);">
             <div class="container">
                 <div class="title-content">
-                    <div class="title-label">This is Jonathan</div>
+                    <!-- <div class="title-label">This is Jonathan</div> -->
             
                     <div class="text-component">
                         <h1>Jonathan Joe</h1>
@@ -116,6 +117,7 @@
 
     <section class="page-container page4">
         <div class="pagejumper" id="page4-jumper"></div>
+        <i class="fab fa-js-square fa-7x icons-js"></i>
         
     </section>
     <!-- <section class=main-section>
