--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
         </ul>
         <ul>
             <!-- RENAME ALL PAGEJUMPERS BECAUSE IT SHOWS IN THE URL -->
-            <li><a href="#page1-jumper">About</a></li>
+            <!-- <li><a href="#page1-jumper">About</a></li> -->
             <!-- <li><a href="#page2-jumper">Featured</a></li> -->
             <li><a href="#page3-jumper">Projects</a></li>
+            <li><a href="#page4-jumper">Skills</a></li>
             <li><a href="#page4-jumper">Contact</a></li>
         </ul>
     </nav>
@@ -117,7 +118,33 @@
 
     <section class="page-container page4">
         <div class="pagejumper" id="page4-jumper"></div>
-        <i class="fab fa-js-square fa-7x icons-js"></i>
+        <div class="page4-container">
+            <section class="skills-container half-page">
+                <div class="text-component">
+                    <h1>Skills</h1>
+                    <!-- <p>Have you heard of the coffee app?</p> -->
+                </div>
+                <i class="fab fa-js-square fa-7x icons-js skill-icon"></i>
+                <i class="fab fa-python fa-7x skill-icon"></i>
+                <i class="fab fa-github-square fa-7x skill-icon"></i>
+                <i class="fab fa-node-js fa-7x skill-icon"></i>
+                <i class="fab fa-css3 fa-7x skill-icon"></i>
+                <i class="fab fa-html5 fa-7x skill-icon"></i>
+                <i class="fab fa-bootstrap fa-7x skill-icon"></i>
+                <i class="fas fa-database fa-7x skill-icon"></i>
+                <!-- <p>express</p>
+                <p>postgreSQL</p> -->
+
+            </section>
+            <section class="contact-container half-page">
+                    <div class="text-component">
+                        <h1>Contact</h1>
+                        <!-- <p>Have you heard of the coffee app?</p> -->
+                    </div>
+                <i class="fab fa-github fa-5x"></i>
+            </section>
+
+        </div>
         
     </section>
     <!-- <section class=main-section>
