--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Jonathan Joe Portfolio</title>
     <link rel="stylesheet" href="./styles/index.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/712a3fd887.js"></script>
 </head>
 <body>
@@ -26,7 +27,7 @@
     <div class="pagejumper" id="page1-jumper"></div>
     
     <section class="page-container page1">
-        <section class="title-container" style="background-image: url(/images/giraffe.jpeg);">
+        <section class="title-container" style="background-image: url(/images/mountains.jpeg);">
             <div class="container">
                 <div class="title-content">
                     <!-- <div class="title-label">This is Jonathan</div> -->
@@ -57,7 +58,7 @@
 
         <div class="text-component">
             <h1>Projects</h1>
-            <p>Have you heard of the coffee app?</p>
+            <!-- <p>Have you heard of the coffee app?</p> -->
         </div>
 
         <section class="projects-container">
@@ -90,7 +91,7 @@
             <div class="project-container">
                 <h1 class="project-header">SweetHub</h1>
                 <div class="project-middle">
-                    <img src="/images/boba.png" alt="Avatar" class="project-image">
+                    <img src="/images/Classic_bubble_tea.jpg" alt="Avatar" class="project-image">
                     <div class="project-hover">
                         <div class="project-desc">
                             <p class="project-text">A social website designed to bring individuals together to enjoy their favorite desserts
