Added contact icons.  Added anchors to github, email, and linkedin.

--- a/index.html
+++ b/index.html
@@ -142,7 +142,18 @@
                         <h1>Contact</h1>
                         <!-- <p>Have you heard of the coffee app?</p> -->
                     </div>
-                <i class="fab fa-github fa-5x"></i>
+                <a href="https://github.com/JonathanDonJoe">
+                    <i class="fab fa-github fa-5x contact-icon"></i>
+                </a>
+                <a href="mailto:JonathanDonJoe@gmail.com">
+                    <i class="fas fa-envelope fa-5x contact-icon"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/jonathandonjoe/">
+                    <i class="fab fa-linkedin fa-5x contact-icon"></i>
+                </a>
+                <a href="#">
+                    <i class="fas fa-file-alt fa-5x contact-icon"></i>
+                </a>
             </section>
 
         </div>
