Added responsiveness to nav bar.  Fixed contact icon and contact page responsiveness.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <!-- <li><a href="#page2-jumper">Featured</a></li> -->
             <li><a href="#page3-jumper">Projects</a></li>
             <li><a href="#page4-jumper">Skills</a></li>
-            <li><a href="#page4-jumper">Contact</a></li>
+            <li><a href="#page4-jumper" id="nav-contact">Contact</a></li>
         </ul>
     </nav>
     
@@ -138,21 +138,21 @@
 
             </section>
             <section class="contact-container half-page">
-                    <div class="text-component">
-                        <h1>Contact</h1>
-                        <!-- <p>Have you heard of the coffee app?</p> -->
-                    </div>
+                <div class="text-component">
+                    <h1>Contact</h1>
+                    <!-- <p>Have you heard of the coffee app?</p> -->
+                </div>
                 <a href="https://github.com/JonathanDonJoe">
-                    <i class="fab fa-github fa-5x contact-icon"></i>
+                    <i class="fab fa-github fa-7x contact-icon"></i>
                 </a>
                 <a href="mailto:JonathanDonJoe@gmail.com">
-                    <i class="fas fa-envelope fa-5x contact-icon"></i>
+                    <i class="fas fa-envelope fa-7x contact-icon"></i>
                 </a>
                 <a href="https://www.linkedin.com/in/jonathandonjoe/">
-                    <i class="fab fa-linkedin fa-5x contact-icon"></i>
+                    <i class="fab fa-linkedin fa-7x contact-icon"></i>
                 </a>
                 <a href="#">
-                    <i class="fas fa-file-alt fa-5x contact-icon"></i>
+                    <i class="fas fa-file-alt fa-7x contact-icon"></i>
                 </a>
             </section>
 
