--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 <a href="https://www.linkedin.com/in/jonathandonjoe/">
                     <i class="fab fa-linkedin fa-7x contact-icon"></i>
                 </a>
-                <a href="#">
+                <a href="documents/Jonathan-Joe-Resume-2019.pdf">
                     <i class="fas fa-file-alt fa-7x contact-icon"></i>
                 </a>
             </section>
