changed icons for more clarity

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Jonathan Joe Portfolio</title>
     <link rel="stylesheet" href="./styles/index.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/712a3fd887.js"></script>
+    <!-- <script src="https://kit.fontawesome.com/712a3fd887.js"></script> -->
+    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+
 </head>
 <body>
     <nav>
@@ -118,21 +120,46 @@
     </section>
 
     <section class="page-container page4">
-        <div class="pagejumper" id="page4-jumper"></div>
+        <div class="pagejseumper" id="page4-jumper"></div>
         <div class="page4-container">
             <section class="skills-container half-page">
                 <div class="text-component">
                     <h1>Skills</h1>
                     <!-- <p>Have you heard of the coffee app?</p> -->
                 </div>
-                <i class="fab fa-js-square fa-3x icons-js skill-icon"></i>
+                <!-- <i class="fab fa-js-square fa-3x icons-js skill-icon"></i>
                 <i class="fab fa-python fa-3x skill-icon"></i>
                 <i class="fab fa-github-square fa-3x skill-icon"></i>
                 <i class="fab fa-node-js fa-3x skill-icon"></i>
                 <i class="fab fa-css3 fa-3x skill-icon"></i>
                 <i class="fab fa-html5 fa-3x skill-icon"></i>
                 <i class="fab fa-bootstrap fa-3x skill-icon"></i>
-                <i class="fas fa-database fa-3x skill-icon"></i>
+                <i class="fas fa-database fa-3x skill-icon"></i> -->
+
+                <i class="devicon-javascript-plain fa-3x skill-icon"></i>
+                <i class="devicon-python-plain-wordmark skill-icon"></i>
+                <i class="devicon-github-plain-wordmark skill-icon"></i>
+                <i class="devicon-nodejs-plain-wordmark skill-icon"></i>
+                <i class="devicon-css3-plain-wordmark skill-icon"></i>
+                <i class="devicon-html5-plain-wordmark skill-icon"></i>
+                <i class="devicon-bootstrap-plain-wordmark skill-icon"></i>
+                <i class="devicon-postgresql-plain-wordmark skill-icon"></i>
+                <i class="devicon-express-original-wordmark skill-icon"></i>
+                <i class="devicon-amazonwebservices-plain-wordmark skill-icon"></i>
+                <i class="devicon-react-original-wordmark skill-icon"></i>
+                
+
+
+
+
+
+
+
+
+
+
+
+
                 <!-- <p>express</p>
                 <p>postgreSQL</p> -->
 
