Changed icons container to flexbox.  Added mysql icon.

--- a/index.html
+++ b/index.html
@@ -135,18 +135,44 @@
                 <i class="fab fa-html5 fa-3x skill-icon"></i>
                 <i class="fab fa-bootstrap fa-3x skill-icon"></i>
                 <i class="fas fa-database fa-3x skill-icon"></i> -->
-
-                <i class="devicon-javascript-plain fa-3x skill-icon"></i>
-                <i class="devicon-python-plain-wordmark skill-icon"></i>
-                <i class="devicon-github-plain-wordmark skill-icon"></i>
-                <i class="devicon-nodejs-plain-wordmark skill-icon"></i>
-                <i class="devicon-css3-plain-wordmark skill-icon"></i>
-                <i class="devicon-html5-plain-wordmark skill-icon"></i>
-                <i class="devicon-bootstrap-plain-wordmark skill-icon"></i>
-                <i class="devicon-postgresql-plain-wordmark skill-icon"></i>
-                <i class="devicon-express-original-wordmark skill-icon"></i>
-                <i class="devicon-amazonwebservices-plain-wordmark skill-icon"></i>
-                <i class="devicon-react-original-wordmark skill-icon"></i>
+                <div class="skill-card-container">
+                    <div class="skill-card">
+                        <i class="devicon-javascript-plain fa-3x skill-icon"></i>
+                    </div>
+                    <div class="skill-card">
+                        <i class="devicon-python-plain-wordmark skill-icon"></i>
+                    </div>
+                    <div class="skill-card">
+                        <i class="devicon-github-plain-wordmark skill-icon"></i>
+                    </div>
+                    <div class="skill-card">
+                        <i class="devicon-nodejs-plain-wordmark skill-icon"></i>
+                    </div>
+                    <div class="skill-card">
+                        <i class="devicon-css3-plain-wordmark skill-icon"></i>
+                    </div>
+                    <div class="skill-card">
+                        <i class="devicon-html5-plain-wordmark skill-icon"></i>
+                    </div>
+                    <div class="skill-card">
+                        <i class="devicon-bootstrap-plain-wordmark skill-icon"></i>
+                    </div>
+                    <div class="skill-card">
+                        <i class="devicon-postgresql-plain-wordmark skill-icon"></i>
+                    </div>
+                    <div class="skill-card">
+                        <i class="devicon-express-original-wordmark skill-icon"></i>
+                    </div>
+                    <div class="skill-card">
+                        <i class="devicon-amazonwebservices-plain-wordmark skill-icon"></i>
+                    </div>
+                    <div class="skill-card">
+                        <i class="devicon-react-original-wordmark skill-icon"></i>
+                    </div>
+                    <div class="skill-card">
+                        <i class="devicon-mysql-plain-wordmark skill-icon"></i>
+                    </div>
+                </div>
                 
 
 
