Added skill icon cards in projects page, indicating what technologies were used in each project

--- a/index.html
+++ b/index.html
@@ -75,17 +75,28 @@
                             </p>
                         </div>
                         <div class="project-links">
-                            <a href="https://senpai.jonathanjoe.xyz">
+                            <a target='_blank' href="https://senpai.jonathanjoe.xyz">
                                 <button class="project-button" >
                                     Live Demo
                                 </button>
                             </a>
-                            <a href="https://github.com/JonathanDonJoe/SenpaiSearch">
+                            <a target='_blank' href="https://github.com/JonathanDonJoe/SenpaiSearch">
                                 <button class="project-button">
                                 GitHub
                                 </button>
                             </a>
                         </div>
+                    </div>
+                </div>
+                <div class="project-skills-container">
+                    <div class="project-skill-card">
+                        <i class="devicon-javascript-plain  project-skill-icon"></i>
+                    </div>
+                    <div class="project-skill-card">
+                        <i class="devicon-css3-plain-wordmark  project-skill-icon"></i>
+                    </div>
+                    <div class="project-skill-card">
+                        <i class="devicon-html5-plain-wordmark  project-skill-icon"></i>
                     </div>
                 </div>
             </div>
@@ -100,17 +111,37 @@
                             </p>
                         </div>
                         <div class="project-links">
-                            <a href="https://sweet.jonathanjoe.xyz">
+                            <a target='_blank' href="https://sweet.jonathanjoe.xyz">
                                 <button class="project-button">
                                     Live Demo
                                 </button>
                             </a>
-                            <a href="https://github.com/JonathanDonJoe/SweetHub">
+                            <a target='_blank' href="https://github.com/JonathanDonJoe/SweetHub">
                                 <button class="project-button">
                                     GitHub
                                 </button>
                             </a>
                         </div>
+                    </div>
+                </div>
+                <div class="project-skills-container">
+                    <div class="project-skill-card">
+                        <i class="devicon-javascript-plain  project-skill-icon"></i>
+                    </div>
+                    <div class="project-skill-card">
+                        <i class="devicon-css3-plain-wordmark  project-skill-icon"></i>
+                    </div>
+                    <div class="project-skill-card">
+                        <i class="devicon-html5-plain-wordmark  project-skill-icon"></i>
+                    </div>
+                    <div class="project-skill-card">
+                        <i class="devicon-express-original-wordmark  project-skill-icon"></i>
+                    </div>
+                    <div class="project-skill-card">
+                        <i class="devicon-bootstrap-plain-wordmark  project-skill-icon"></i>
+                    </div>
+                    <div class="project-skill-card">
+                        <i class="devicon-postgresql-plain-wordmark  project-skill-icon"></i>
                     </div>
                 </div>
             </div>
@@ -198,25 +229,25 @@
                 <div class="contact-card-container">
                     <div class="contact-card">
                         <p>Github</p>
-                        <a href="https://github.com/JonathanDonJoe">
+                        <a target='_blank' href="https://github.com/JonathanDonJoe">
                             <i class="fab fa-github fa-6x contact-icon"></i>
                         </a>
                     </div>
                     <div class="contact-card">
                         <p>Email</p>
-                        <a href="mailto:JonathanDonJoe@gmail.com">
+                        <a target='_blank' href="mailto:JonathanDonJoe@gmail.com">
                             <i class="fas fa-envelope fa-6x contact-icon"></i>
                         </a>
                     </div>
                     <div class="contact-card">
                         <p>LinkedIn</p>
-                        <a href="https://www.linkedin.com/in/jonathandonjoe/">
+                        <a target='_blank' href="https://www.linkedin.com/in/jonathandonjoe/">
                             <i class="fab fa-linkedin fa-6x contact-icon"></i>
                         </a>
                     </div>
                     <div class="contact-card">
                         <p>Resume</p>
-                        <a href="documents/Jonathan-Joe-Resume-2019.pdf">
+                        <a target='_blank' href="documents/Jonathan-Joe-Resume-2019.pdf">
                             <i class="fas fa-file-alt fa-6x contact-icon"></i>
                         </a>
                     </div>
