Added title text

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                     <div class="text-component">
                         <h1 id='feature-name'>Jonathan Joe</h1>
                         <p id='feature-text'>Full Stack Software Developer</p>
+                        <p id='regular-text'>I'm a software developer with a bachelor's degree in biomedical engineering.   I have an insatiable thirst for knowledge and a strong desire to create innovative products.  While attending university, I discovered that my passion for programming far outweighed my passion for biological sciences.  Feeling limited by my field of study, I leaped into the world of programming.</p>
                     </div>
                 
                     <div class="flex flex-wrap items-center flex-gap-sm">
