Added redux icon.  Fixed more responsive bugs.  Changed project images.  Added technologies used in projects

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="project-container">
                 <h1 class="project-header">Senpai Search</h1>
                 <div class="project-middle">
-                    <img src="/images/kaneki.png" alt="Avatar" class="project-image">
+                    <img src="/images/senpaiSearch.jpeg" alt="Avatar" class="project-image">
                     <div class="project-hover">
                         <div class="project-desc">
                             <p class="project-text">Anime themes site where users can search for openings and endings to various anime.
@@ -105,7 +105,7 @@
             <div class="project-container">
                 <h1 class="project-header">SweetHub</h1>
                 <div class="project-middle">
-                    <img src="/images/Classic_bubble_tea.jpg" alt="Avatar" class="project-image">
+                    <img src="/images/sweetHub.jpeg" alt="Avatar" class="project-image">
                     <div class="project-hover">
                         <div class="project-desc">
                             <p class="project-text">A social website designed to bring individuals together to enjoy their favorite desserts
@@ -152,9 +152,9 @@
     </section>
 
     <section class="page-container page4">
-        <div class="pagejumper" id="page4-jumper"></div>
+        <div class="pagejumper"></div>
         <div class="page4-container">
-            <section class="skills-container half-page">
+            <section class="skills-container half-page " id='page4-jumper'>
                 <div class="text-component">
                     <h1>Skills</h1>
                     <!-- <p>Have you heard of the coffee app?</p> -->
@@ -203,6 +203,9 @@
                     </div>
                     <div class="skill-card">
                         <i class="devicon-mysql-plain-wordmark skill-icon"></i>
+                    </div>
+                    <div class="skill-card">
+                        <i class="skill-icon2">Redux</i>
                     </div>
                 </div>
                 
