--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     </div>
                 </div>
             </div>
-            <img class="profile-avatar" src="/images/face.jpg" alt="Jonathan Joe">
+            <img class="profile-avatar" src="/images/jonathan_joe.jpg" alt="Jonathan Joe">
         </section>
         <!-- <div class="pagejumper page2-jumper"></div>  -->
     </section>
