Fixed more responsive bugs

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <ul>
             <li class='nav-title'><a href="#">Jonathan Joe</a></li>
         </ul>
-        <ul>
+        <ul class='nav-links'>
             <!-- RENAME ALL PAGEJUMPERS BECAUSE IT SHOWS IN THE URL -->
             <!-- <li><a href="#page1-jumper">About</a></li> -->
             <!-- <li><a href="#page2-jumper">Featured</a></li> -->
