fixed skill icons

--- a/index.html
+++ b/index.html
@@ -62,33 +62,29 @@
         <!-- <div class="pagejumper" id="page2-jumper"></div> -->
         <img class='featured-project-image' src='/images/homecookd.jpeg' alt='homecookd' />
         <div class="project-skills-container">
-
             <div class="project-skill-card">
-                <i class="devicon-react-original-wordmark project-skill-icon"></i>
+                <i class="devicon-javascript-plain  project-skill-icon"></i>
             </div>
             <div class="project-skill-card">
-                <i class="devicon-mysql-plain-wordmark project-skill-icon"></i>
+                <i class="devicon-react-original-wordmark project-skill-icon"></i>
             </div>
             <div class="project-skill-card">
                 <i class="project-skill-icon2 skill-icon2">Redux</i>
             </div>
             <div class="project-skill-card">
-                <i class="devicon-javascript-plain  project-skill-icon"></i>
+                <i class="devicon-express-original-wordmark  project-skill-icon"></i>
             </div>
+            <div class="project-skill-card">
+                <i class="devicon-mysql-plain-wordmark project-skill-icon"></i>
+            </div>
+            <div class="project-skill-card">
+                    <i class="project-skill-icon2 skill-icon2">Materialize</i>
+                </div>
             <div class="project-skill-card">
                 <i class="devicon-css3-plain-wordmark  project-skill-icon"></i>
             </div>
             <div class="project-skill-card">
                 <i class="devicon-html5-plain-wordmark  project-skill-icon"></i>
-            </div>
-            <div class="project-skill-card">
-                <i class="devicon-express-original-wordmark  project-skill-icon"></i>
-            </div>
-            <div class="project-skill-card">
-                <i class="devicon-bootstrap-plain-wordmark  project-skill-icon"></i>
-            </div>
-            <div class="project-skill-card">
-                <i class="devicon-postgresql-plain-wordmark  project-skill-icon"></i>
             </div>
         </div>
         </div>
@@ -128,6 +124,7 @@
                         </div>
                     </div>
                 </div>
+                <br />
                 <div class="project-skills-container">
                     <div class="project-skill-card">
                         <i class="devicon-javascript-plain  project-skill-icon"></i>
@@ -165,6 +162,7 @@
                         </div>
                     </div>
                 </div>
+                <br />
                 <div class="project-skills-container">
                     <div class="project-skill-card">
                         <i class="devicon-javascript-plain  project-skill-icon"></i>
