Added homecookd as a non-featured project

--- a/index.html
+++ b/index.html
@@ -58,9 +58,13 @@
         <!-- <div class="pagejumper page2-jumper"></div>  -->
     </section>
 
-    <section class="page-container page2">
-        <!-- <div class="pagejumper" id="page2-jumper"></div> -->
+    <!-- <section class="page-container page2">
+        <div class="pagejumper" id="page2-jumper"></div>
+        <div class="text-component">
+            <h1>Featured Project</h1>
+        </div>
         <img class='featured-project-image' src='/images/homecookd.jpeg' alt='homecookd' />
+        <div class="text-component">Homecookd</div>
         <div class="project-skills-container">
             <div class="project-skill-card">
                 <i class="devicon-javascript-plain  project-skill-icon"></i>
@@ -78,8 +82,8 @@
                 <i class="devicon-mysql-plain-wordmark project-skill-icon"></i>
             </div>
             <div class="project-skill-card">
-                    <i class="project-skill-icon2 skill-icon2">Materialize</i>
-                </div>
+                <i class="project-skill-icon2 skill-icon2">Materialize</i>
+            </div>
             <div class="project-skill-card">
                 <i class="devicon-css3-plain-wordmark  project-skill-icon"></i>
             </div>
@@ -88,7 +92,7 @@
             </div>
         </div>
         </div>
-    </section>
+    </section> -->
 
     <section class="page-container page3">
         <div class="pagejumper" id="page3-jumper"></div>
@@ -99,6 +103,58 @@
         </div>
 
         <section class="projects-container">
+
+            <div class="project-container">
+                <h1 class="project-header">Homecookd</h1>
+                <div class="project-middle">
+                    <img src="/images/homecookd.jpeg" alt="homecookd" class="project-image">
+                    <div class="project-hover">
+                        <div class="project-desc">
+                            <p class="project-text">App providing the infrastructure for community driven food related events.
+                            </p>
+                        </div>
+                        <div class="project-links">
+                            <a target='_blank' href="https://homecookd.us">
+                                <button class="project-button">
+                                    Live Demo
+                                </button>
+                            </a>
+                            <a target='_blank' href="https://github.com/JonathanDonJoe/homecookd">
+                                <button class="project-button">
+                                    GitHub
+                                </button>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <br />
+                <div class="project-skills-container">
+                        <div class="project-skill-card">
+                                <i class="devicon-javascript-plain  project-skill-icon"></i>
+                            </div>
+                            <div class="project-skill-card">
+                                <i class="devicon-react-original-wordmark project-skill-icon"></i>
+                            </div>
+                            <div class="project-skill-card">
+                                <i class="project-skill-icon2">Redux</i>
+                            </div>
+                            <div class="project-skill-card">
+                                <i class="devicon-express-original-wordmark  project-skill-icon"></i>
+                            </div>
+                            <div class="project-skill-card">
+                                <i class="devicon-mysql-plain-wordmark project-skill-icon"></i>
+                            </div>
+                            <div class="project-skill-card">
+                                <i class="project-skill-icon2">Materialize</i>
+                            </div>
+                            <div class="project-skill-card">
+                                <i class="devicon-css3-plain-wordmark  project-skill-icon"></i>
+                            </div>
+                            <div class="project-skill-card">
+                                <i class="devicon-html5-plain-wordmark  project-skill-icon"></i>
+                            </div>
+                </div>
+            </div>
 
             <div class="project-container">
                 <h1 class="project-header">Senpai Search</h1>
