Fixed projects spacing issue

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <div class="pagejumper" id="page3-jumper"></div>
 
         <div class="text-component">
-            <h1>Projects</h1>
+            <h1 class='projects-header'>Projects</h1>
             <!-- <p>Have you heard of the coffee app?</p> -->
         </div>
 
