--- a/index.html
+++ b/index.html
@@ -301,6 +301,9 @@
                     <div class="skill-card">
                         <i class="skill-icon2">Redux</i>
                     </div>
+                    <div class="skill-card">
+                        <i class="skill-icon2-alt">Materialize</i>
+                    </div>
                 </div>
 
 
