--- a/index.html
+++ b/index.html
@@ -262,46 +262,46 @@
                 <i class="fab fa-bootstrap fa-3x skill-icon"></i>
                 <i class="fas fa-database fa-3x skill-icon"></i> -->
                 <div class="skill-card-container">
-                    <div class="skill-card">
+                    <div class="skill-card" tabindex="0">
                         <i class="devicon-javascript-plain  skill-icon"></i>
                     </div>
-                    <div class="skill-card">
+                    <div class="skill-card" tabindex="0">
                         <i class="devicon-python-plain-wordmark skill-icon"></i>
                     </div>
-                    <div class="skill-card">
+                    <div class="skill-card" tabindex="0">
                         <i class="devicon-github-plain-wordmark skill-icon"></i>
                     </div>
-                    <div class="skill-card">
+                    <div class="skill-card" tabindex="0">
                         <i class="devicon-nodejs-plain-wordmark skill-icon"></i>
                     </div>
-                    <div class="skill-card">
+                    <div class="skill-card" tabindex="0">
                         <i class="devicon-css3-plain-wordmark skill-icon"></i>
                     </div>
-                    <div class="skill-card">
+                    <div class="skill-card" tabindex="0">
                         <i class="devicon-html5-plain-wordmark skill-icon"></i>
                     </div>
-                    <div class="skill-card">
+                    <div class="skill-card" tabindex="0">
                         <i class="devicon-bootstrap-plain-wordmark skill-icon"></i>
                     </div>
-                    <div class="skill-card">
+                    <div class="skill-card" tabindex="0">
                         <i class="devicon-postgresql-plain-wordmark skill-icon"></i>
                     </div>
-                    <div class="skill-card">
+                    <div class="skill-card" tabindex="0">
                         <i class="devicon-express-original-wordmark skill-icon"></i>
                     </div>
-                    <div class="skill-card">
+                    <div class="skill-card" tabindex="0">
                         <i class="devicon-amazonwebservices-plain-wordmark skill-icon"></i>
                     </div>
-                    <div class="skill-card">
+                    <div class="skill-card" tabindex="0">
                         <i class="devicon-react-original-wordmark skill-icon"></i>
                     </div>
-                    <div class="skill-card">
+                    <div class="skill-card" tabindex="0">
                         <i class="devicon-mysql-plain-wordmark skill-icon"></i>
                     </div>
-                    <div class="skill-card">
+                    <div class="skill-card" tabindex="0">
                         <i class="skill-icon2">Redux</i>
                     </div>
-                    <div class="skill-card">
+                    <div class="skill-card" tabindex="0">
                         <i class="skill-icon2-alt">Materialize</i>
                     </div>
                 </div>
