Removes jump to id # when clicking on nav

--- a/index.html
+++ b/index.html
@@ -17,15 +17,17 @@
 <body>
     <nav>
         <ul>
-            <li class='nav-title'><a href="#">Jonathan Joe</a></li>
+            <li class='nav-title'><a class='jump1'>Jonathan Joe</a></li>
         </ul>
         <ul class='nav-links'>
             <!-- RENAME ALL PAGEJUMPERS BECAUSE IT SHOWS IN THE URL -->
             <!-- <li><a href="#page1-jumper">About</a></li> -->
             <!-- <li><a href="#page2-jumper">Featured</a></li> -->
-            <li><a href="#page3-jumper">Projects</a></li>
-            <li><a href="#page4-jumper">Skills</a></li>
-            <li><a href="#page4.5-jumper" id="nav-contact">Contact</a></li>
+            <li><a class='jump3'>Projects</a></li>
+            <li><a class='jump4'>Skills</a></li>
+            <li><a class='jump5'>Contact</a></li>
+            <!-- <li><a href="#page4-jumper">Skills</a></li>
+            <li><a href="#page4.5-jumper" id="nav-contact">Contact</a></li> -->
         </ul>
     </nav>
 
@@ -322,7 +324,7 @@
                 <p>postgreSQL</p> -->
 
             </section>
-            <section class="contact-container half-page" id='page4.5-jumper'>
+            <section class="contact-container half-page" id='page5-jumper'>
                 <div class="text-component">
                     <h1>Contact</h1>
                     <!-- <p>Have you heard of the coffee app?</p> -->
