Whitens title background for increased visibility

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
     <div class="pagejumper" id="page1-jumper"></div>
 
-    <section class="page-container page1">
-        <section class="title-container" style="background-image: url(/images/mountains.jpeg);">
+    <section class="page-container page1" style="background-image: url(/images/mountains.jpeg);">
+        <section class="title-container whiten-bg">
             <div class="container title-info-container">
                 <div class="title-content">
                     <!-- <div class="title-label">This is Jonathan</div> -->
